Clear stuff after the last song of an album ends

--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -16,8 +16,16 @@
 	position: relative;
 	border: 1px solid white;
 	float: left;
+	margin-top: 2px;
+	margin-left: 2px;
+	margin-right: 5px;
 }
 #footer #nowplaying ul {
+	list-style: none;
 }
 audio {
+}
+
+.noborder {
+	border: none !important;
 }
