--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -1,11 +1,18 @@
+html, body {
+	height: 100%;
+}
+
 .container {
 	margin-bottom: 100px;
+	height: 100%;
 }
+
+
 #footer {
 	position: fixed;
 	bottom: 0;
 	background-color: #000;
-	z-index: 1;
+	z-index: 10;
 	width: 100%;
 	height: 60px;
 	color: #eee;
@@ -24,9 +31,19 @@
 	list-style: none;
 }
 
-.music-list {
-	overflow-y: scroll;
+#main {
 	height: 100%;
+}
+#data {
+	height: 100%;
+}
+.music-list {
+	height: 100%;
+}
+.music-list ul {
+	overflow-y: scroll;
+	overflow-x: hidden;
+	height: 90%;
 }
 
 audio {
