Adding searh feature

--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -66,3 +66,11 @@ audio {
 .noborder {
 	border: none !important;
 }
+
+input {
+	font-size: 16pt;
+	font-weight: bold;
+	border: none;
+	background: none;
+	border-left: 2px solid gray;
+}
