--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 				&copy; Dave Eddy <a href="https://github.com/bahamas10">&lt;bahamas10&gt;</a>
 			</footer>
 		</div>
-		<a href="https://github.com/bahamas10/Viridian"><img style="position: absolute; top:
+		<a href="https://github.com/bahamas10/node-webamp"><img style="position: absolute; top:
 			0; right: 0; border: 0;"
 			src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
 			alt="Fork me on GitHub"></a>
